--- a/desafios/desafio3/style.css
+++ b/desafios/desafio3/style.css
@@ -13,7 +13,7 @@ section{
     position:absolute;
     top: 0;
     left: 0;
-    border-right: 2px solid #262626;
-    
+    border-right: 2px solid #5f2c02;
+
 
 }
